log/build_2023-05-07_02-19-28/PSO_pkg/stderr.log
  File "/home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg/Drone.py", line 19
    import geometry_msgs.msg import Twist,Point
                             ^
SyntaxError: invalid syntax

